css/style.scss
// Bare Ninja settings file
@import "global/settings";

// Import Bare Ninja
@import "bower_components/bare-ninja/css/bare-ninja";

// Variables
@import "global/variables";

// Base styles
body {
	font-family: $roboto;
	color: $dark;
}

#jsScrollStart {
	background: white;
	position: relative;
	z-index: 2;
}

// Layout files
@import "layout/layout";
@import "layout/header";
@import "layout/hero";
@import "layout/footer";

// Module files
@import "module/off-canvas";
@import "module/typography";
@import "module/button";
@import "module/subnav";
@import "module/features";
@import "module/usage";
@import "module/rainbow";

